# ai-playground

agents-overview/: Pipfile
documentation-helper/: Pipfile
documentation-helper/frontend/: ui.py
hugging-face/intro-hf-inference-api/: main.py  pyproject.toml
ice-breaker/: Pipfile  README.md  app.py
ice-breaker/third_parties/: linkedin.py  twitter.py
ice-breaker/tools/: tools.py
intro-to-vector-db/: Pipfile  main.py
langchain/agents-overview/: main.py
langchain/code-interpreter/: Pipfile  main.py
langchain/custom-llms-and-embeddings/: main.py  pyproject.toml
langchain/ice-breaker/templates/: person.html
langchain/intro-chromadb/: .gitignore  main.py  pyproject.toml
langchain/intro-to-vector-db/data/: blog.txt
langchain/openai-lm-studio/: main.py  pyproject.toml
langchain/vector-db-in-memory/: .gitignore  Pipfile
llama-index/agents-llama-index/: Pipfile  main.py
llama-index/documentation-helper/: .gitignore  Pipfile  download_docs.py  ingestion.py  main.py
llama-index/documentation-helper/node_postprocessors/: duplicate_postprocessing.py
llama-index/intro-llama-index/: Pipfile  main.py
vector-db-in-memory/: main.py
